--- a/Projects.Web/js/mvc/Projects/home/views/init.mustache
+++ b/Projects.Web/js/mvc/Projects/home/views/init.mustache
@@ -2,11 +2,11 @@
     <div class="column">
         <h2>current.</h2>
         <div class="project">
-            <h3>a project.</h3>
+            <h3>a project. AAA</h3>
         </div>
     </div>
     <div class="column">
-        <h2>past.</h2>
+        <h2>past. AAA</h2>
         <div class="project">
             <h3>another project with a longer name.</h3>
             <div class="intro">intro / expert something something something.</div>
